-------------------------------------------------------------------------------
  Version 20230131 (2023-01-31)
-------------------------------------------------------------------------------
  * Added uk_UA locale

-------------------------------------------------------------------------------
  Version 20220704 (2022-07-04)
-------------------------------------------------------------------------------
  * Updated it locale
  * Added es_ES locale

-------------------------------------------------------------------------------
  Version 20210930 (2021-09-30)
-------------------------------------------------------------------------------
  * Removed gparted from deps

-------------------------------------------------------------------------------
  Version 20210406 (2021-04-06)
-------------------------------------------------------------------------------
  * Added Spanish locale

-------------------------------------------------------------------------------
  Version 20210322 (2021-03-22)
-------------------------------------------------------------------------------
  * Small fix

-------------------------------------------------------------------------------
  Version 20201006 (2020-10-06)
-------------------------------------------------------------------------------
  * Updated locale checking

-------------------------------------------------------------------------------
  Version 20191125 (2019-11-25)
-------------------------------------------------------------------------------
  * Added Greek locale

-------------------------------------------------------------------------------
  Version 20191017 (2019-10-17)
-------------------------------------------------------------------------------
  * Added Hungarian locale

-------------------------------------------------------------------------------
  Version 20190616 (2019-06-16)
-------------------------------------------------------------------------------
  * Added Russian locale
