@@ -7,8 +7,8 @@
 # Created October 28th, 2007, 2008, 2012
 #
 # Forked for SparkyLinux by pavroo <pavroo@onet.eu> 2013/08/05
-# Copyright 2013-2023 Under the GNU GPL2 License
-# Last update 2023/01/31 by pavroo
+# Copyright 2013-2024 Under the GNU GPL2 License
+# Last update 2024/08/04 by pavroo
 
 # get default's locale file
 DEFLOCDIR="/usr/share/sparky/sparky-backup-sys"
@@ -22,6 +22,8 @@ elif [ "`cat /etc/default/locale | grep LANG= | grep es`" != "" ]; then
 	else
 . $DEFLOCDIR/es_ES
 	fi
+elif [ "`cat /etc/default/locale | grep LANG= | grep fi`" != "" ]; then
+. $DEFLOCDIR/fi
 elif [ "`cat /etc/default/locale | grep LANG= | grep fr`" != "" ]; then
 . $DEFLOCDIR/fr
 elif [ "`cat /etc/default/locale | grep LANG= | grep hu`" != "" ]; then
