@@ -1,0 +1,88 @@
+# Suomenkielinen lokalisointitiedosto Sparky Backup Sysille.
+# Tekijänoikeus 2018 PaweÅ‚ "pavroo" Pijanowski <pavroo@onet.eu> 27.3.2018
+# GNU GPL v2:n alla
+# Viimeisin päivitys 2019/06/16 by pavroo
+LOCAL1="Pitäisi olla pääkäyttäjä..."
+LOCAL2="Poistutaan nyt..."
+LOCAL3="Se on Live-järjestelmä!"
+LOCAL4="Asenna Sparky kiintolevylle ja remasteroi se."
+LOCAL5="Valitse vaihtoehto:"
+LOCAL6="Tietoja Sparky-varmuuskopiojärjestelmästä"
+LOCAL7="Lue tämä, jos haluat lisätä tuen UEFI-koneille"
+LOCAL8="Muokkaa sparkybackup-määritystiedostoa"
+LOCAL9="Muokkaa sparkylinux-asennusohjelman asetustiedostoa"
+LOCAL10="Puhdista APT-välimuisti pienentääksesi iso-kuvan kokoa"
+LOCAL11="Luo varmuuskopio ISO-kuva elävälle käyttäjälle"
+LOCAL12="Poista kaikki kopioidut tiedostot työhakemistosta"
+LOCAL13="Näytä varmuuskopiolokitiedosto"
+LOCAL14="Sparkybackup.log-tiedostoa ei ole olemassa"
+LOCAL15="SparkyBackup on työkalu, joka voi tehdä"
+LOCAL16="kopio nykyisestä SparkyLinux-asennuksestasi,"
+LOCAL17="mukaan lukien kaikki jo asentamasi lisäpaketit."
+LOCAL18="Se ei kopioi verkkoselaimia, pikaviestejä ja muita sovelluksia"
+LOCAL19="henkilökohtaiset asetukset, sähköpostit ja luomasi tiedostot."
+LOCAL20="Se tekee käynnistettävän iso-kuvan, joka voidaan polttaa"
+LOCAL21="tyhjälle CD/DVD:lle tai kopioi USB-tikulle."
+LOCAL22="Työkalu voidaan ajaa myös tekstitilassa komennolla:"
+LOCAL23="optio"
+LOCAL24="Sparky Backup System perustuu Remastersys-Guiin,"
+LOCAL25="Sparky Backup Core perustuu Remastersysiin"
+LOCAL26="ja julkaistu GNU GPLv2 -lisenssillä."
+LOCAL27="Käyttöliittymä käyttää Sparky Backup Core -versiota"
+LOCAL28="Virheistä ja ehdotuksista voidaan ilmoittaa osoitteessa"
+LOCAL29="Jos haluat rakentaa uuden iso-kuvan"
+LOCAL30="joka voidaan käyttää koneissa, joissa on UEFI-emolevy, tee:"
+LOCAL31="Lataa 6 DEB-tiedostoa Debianin (vakaa/testaus) arkistosta:"
+LOCAL32="tai"
+LOCAL33="Siirrä kaikki 64 (tai 32) bitin paketit hakemistoon:"
+LOCAL34="Asenna Calamares-asennusohjelma, jos haluat."
+LOCAL35="Sparky Advanced Installer tarjoaa joka tapauksessa myös UEFI-tuen."
+LOCAL36="Alkaen SparkyLinuxin versiosta 4.0, työkalu"
+LOCAL37="tukee 32- ja 64-bittisiä koneita, joissa on UEFI-emolevy."
+LOCAL38="Tämä kopioi työpöydän perusasetukset"
+LOCAL39="niin niistä tulee live-järjestelmän oletus."
+LOCAL40="Tämä sisältää työpöydän taustan ja muita mukautettuja"
+LOCAL41="työpöytäasetukset, joita ei ole koodattu nykyiseen"
+LOCAL42="käyttäjien kotikansio."
+LOCAL43="On koottava luettelo kelvollisista käyttäjistä."
+LOCAL44="Se voi kestää muutaman sekunnin, joten ole kärsivällinen."
+LOCAL45="Haluatko jatkaa?"
+LOCAL46="Mitään ei ole tehty!"
+LOCAL47="Sulje ikkuna napsauttamalla OK."
+LOCAL48="Valitse käyttäjä, jonka asetukset"
+LOCAL49="haluat tehdä oletuksena."
+LOCAL50="Valitsemallasi käyttäjällä ei ole oikeaa kotihakemistoa."
+LOCAL51="Palaa päävalikkoon napsauttamalla OK."
+LOCAL52="Kopioidaan käyttäjää:"
+LOCAL53="asetukset nyt."
+LOCAL54="Odota..."
+LOCAL55="Asetukset kohteelle"
+LOCAL56="on kopioitu."
+LOCAL57="Luo varmuuskopio iso nyt napsauttamalla OK."
+LOCAL58="Älä keskeytä tätä prosessia."
+LOCAL59="Aloita LiveCD/DVD-varmuuskopiointi napsauttamalla OK."
+LOCAL60="Et valinnut yhtään käyttäjää."
+LOCAL61="Jatka napsauttamalla OK."
+LOCAL62="Pakattu tiedostojärjestelmä on suurempi kuin"
+LOCAL63="iso9660-määritys sallii yhden tiedoston."
+LOCAL64="Sinun täytyy yrittää vähentää datan määrää"
+LOCAL65="varmuuskopioivat ja yritä uudelleen."
+LOCAL66="Uudet tiedostosi:"
+LOCAL67="ovat valmiita hakemistossa:"
+LOCAL68="On suositeltavaa testata iso virtuaalikoneessa tai"
+LOCAL69="uudelleenkirjoitettavalle cd/dvd/usb-levylle varmistaakseen, että se toimii halutulla tavalla."
+LOCAL70="Tämä poistaa kaikki APT:n vara- ja ladatut DEB-paketit."
+LOCAL71="Haluatko siivota nyt?"
+LOCAL72=""
+LOCAL73="Tämä poistaa kaikki kopioidut tiedostot työhakemistoista."
+LOCAL74=""
+LOCAL75="Siivous suoritettu."
+LOCAL76="Käyttö on"
+LOCAL77="käyttäjänimi"
+LOCAL78="Missä käyttäjätunnus on kelvollinen käyttäjä järjestelmässä"
+LOCAL79="Siivotaan /etc/skel tiedostoista, jotka kopioimme"
+LOCAL80="Kopioidaan asetustiedostoja kansioon /etc/skel"
+LOCAL81="joko ei löydy tai sillä ei ole oikeaa kotikansiota."
+LOCAL82="Tämä kopioi työpöytäasetukset live-käyttäjälle"
+### työpöytämerkintä voidaan myös kääntää ###
+# Comment[fi]=SparkyLinux-järjestelmän varmuuskopiointityökalu
