@@ -6,6 +6,7 @@ GenericName=Sparky Backup System
 Comment=SparkyLinux system backup tool
 Comment[el]=SparkyLinux εφαρμογή αντιγράφου συστήματος
 Comment[es]=Herramienta de copia de seguridad de SparkyLinux
+Comment[fi]=SparkyLinux-järjestelmän varmuuskopiointityökalu
 Comment[fr]=Outil de sauvegarde système de SparkyLinux
 Comment[id]=Tool Backup Sistem SparkyLinux
 Comment[it]=Strumento per backup del sistema SparkyLinux
