@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20240804 (2024-08-04)
+-------------------------------------------------------------------------------
+  * Added fi locale
+
+-------------------------------------------------------------------------------
   Version 20230131 (2023-01-31)
 -------------------------------------------------------------------------------
   * Added uk_UA locale
